Make responsive in header top partialy

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
   <header class="container-fluid page-header">
     <div class="header-top row px-3">
-      <div class="header-top__left col-4 d-flex align-items-center pl-4">
+      <div class="header-top__left col-xl-4 col-lg-10 d-flex align-items-center pl-4">
         <div class="dropdown header-top__language-list">
           <button class="dropdown-toggle header-top__language-button header-top__language-link lang-en pr-2" id="language-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English</button>
           <div class="dropdown-menu" aria-labelledby="language-dropdown-button">
@@ -101,13 +101,13 @@
         </div>
         <div class="header-top__number-line ml-1">Order online or call us <a href="tel:+1800008808">(+1800) 000 8808</a></div>
       </div>      
-      <div class="header-top__right col-8">
-        <nav class="header-top__navbar navbar navbar-expand">
+      <div class="header-top__right col-xl-8 col-lg-2">
+        <nav class="header-top__navbar navbar navbar-expand-xl navbar-light">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-responsive-menu" aria-controls="header-responsive-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="header-responsive-menu">
-            <ul class="navbar-nav flex-grow-1 mr-5 flex-wrap justify-content-end">
+            <ul class="navbar-nav flex-grow-1 flex-wrap justify-content-end">
               <li class="nav-item mr-2 active">
                 <a class="nav-link" href="#">Home Page</a>
               </li>
