--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
   <header class="container-fluid page-header">
     <div class="header-top row px-3">
-      <div class="header-top__left col-xl-4 col-lg-10 d-flex align-items-center pl-4">
+      <div class="header-top__left col-xl-4 col-10 d-flex align-items-center pl-4">
         <div class="dropdown header-top__language-list">
           <button class="dropdown-toggle header-top__language-button header-top__language-link lang-en pr-2" id="language-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English</button>
           <div class="dropdown-menu" aria-labelledby="language-dropdown-button">
@@ -101,7 +101,7 @@
         </div>
         <div class="header-top__number-line ml-1">Order online or call us <a href="tel:+1800008808">(+1800) 000 8808</a></div>
       </div>      
-      <div class="header-top__right col-xl-8 col-lg-2">
+      <div class="header-top__right col-xl-8 col-2">
         <nav class="header-top__navbar navbar navbar-expand-xl navbar-light">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-responsive-menu" aria-controls="header-responsive-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -135,11 +135,11 @@
       </div>
       <hr>
     </div>
-    <div class="header-bottom row justify-content-between align-items-center py-4 px-5">
-      <div class="header-bottom__logo navbar-brand">
+    <div class="header-bottom row justify-content-between align-items-center py-4 px-5 mt-5 mt-xl-0">
+      <div class="header-bottom__logo navbar-brand col-2">
         <img src="img/header-logo.png" alt="Header logo">
       </div>
-      <div class="header-bottom__search">
+      <div class="header-bottom__search col-7">
         <form class="form-inline row align-items-stretch justify-content-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
           <input class="search__input form-control input-group-prepend col-7" type="search" placeholder="Search for product..." aria-label="Search">
           <select class="search__select form-control col-3" id="search-select">
@@ -157,7 +157,7 @@
           <button class="search__button btn icon-font-search-solid col-auto" type="submit"></button>
         </div>
       </form>
-      <div class="header-bottom__icons-list d-flex justify-content-end align-items-center">
+      <div class="header-bottom__icons-list d-flex justify-content-end align-items-center col-3">
         <a href="#" class="header-bottom__icon-item icon-font-heart-regular vish-list-popup"></a>
         <div class="vish-list">
           <div class="vish-list__header">
@@ -413,24 +413,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                                
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -491,24 +474,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                               
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -569,24 +535,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                               
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -647,24 +596,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                               
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -725,24 +657,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                                
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -803,24 +718,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                               
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -881,24 +779,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                               
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -959,24 +840,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                               
               </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
@@ -1037,24 +901,7 @@
                       <li><a href="#">Structure</a></li>
                     </ul>
                   </li>
-                </ul>
-                <ul class="drop-down__list">
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                  <li class="drop-down__item">
-                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
-                  </li>
-                </ul>                
+                </ul>                               
               </div>
             </li>
           </ul>
