--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
       <hr>
     </div>
     <div class="header-bottom row justify-content-between align-items-center py-4 px-5 mt-5 mt-xl-0">
-      <div class="header-bottom__logo navbar-brand col-2">
+      <div class="header-bottom__logo navbar-brand col-6 col-lg-2">
         <img src="img/header-logo.png" alt="Header logo">
       </div>
-      <div class="header-bottom__search col-7">
-        <form class="form-inline row align-items-stretch justify-content-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
+      <div class="header-bottom__search col-12 col-lg-7 order-1 mt-3 order-lg-0 mt-lg-0">
+        <form class="form-inline row align-items-stretch justify-content-center justify-content-lg-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
           <input class="search__input form-control input-group-prepend col-7" type="search" placeholder="Search for product..." aria-label="Search">
           <select class="search__select form-control col-3" id="search-select">
             <option value="all">All categories</option>
@@ -157,7 +157,7 @@
           <button class="search__button btn icon-font-search-solid col-auto" type="submit"></button>
         </div>
       </form>
-      <div class="header-bottom__icons-list d-flex justify-content-end align-items-center col-3">
+      <div class="header-bottom__icons-list d-flex justify-content-end align-items-center col-6 col-lg-3">
         <a href="#" class="header-bottom__icon-item icon-font-heart-regular vish-list-popup"></a>
         <div class="vish-list">
           <div class="vish-list__header">
