Fix responsive: Header (992-)

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
       </div>
       <hr>
     </div>
-    <div class="header-bottom row justify-content-between align-items-center py-4 px-5 mt-5 mt-xl-0">
-      <div class="header-bottom__logo navbar-brand col-6 col-lg-2">
+    <div class="header-bottom row justify-content-between align-items-center py-4 px-3 px-xl-5 mt-5 mt-xl-0">
+      <div class="header-bottom__logo navbar-brand col-6 col-lg-2 mr-0">
         <img src="img/header-logo.png" alt="Header logo">
       </div>
       <div class="header-bottom__search col-12 col-lg-7 order-1 mt-3 order-lg-0 mt-lg-0">
         <form class="form-inline row align-items-stretch justify-content-center justify-content-lg-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
-          <input class="search__input form-control input-group-prepend col-7" type="search" placeholder="Search for product..." aria-label="Search">
-          <select class="search__select form-control col-3" id="search-select">
+          <input class="search__input form-control input-group-prepend col-6 col-xl-7" type="search" placeholder="Search for product..." aria-label="Search">
+          <select class="search__select form-control col-4 col-xl-3" id="search-select">
             <option value="all">All categories</option>
             <option value="notebook">Notebook</option>
             <option value="tablet">Tablet</option>
