--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </div>
       <div class="header-bottom__search col-12 col-lg-7 order-1 mt-3 order-lg-0 mt-lg-0">
         <form class="form-inline row align-items-stretch justify-content-center justify-content-lg-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
-          <input class="search__input form-control input-group-prepend col-6 col-xl-7" type="search" placeholder="Search for product..." aria-label="Search">
+          <input class="search__input form-control input-group-prepend col-7 col-lg-6 col-xl-7" type="search" placeholder="Search for product..." aria-label="Search">
           <select class="search__select form-control col-4 col-xl-3" id="search-select">
             <option value="all">All categories</option>
             <option value="notebook">Notebook</option>
