--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
   <header class="container-fluid page-header">
     <div class="header-top row px-3">
-      <div class="header-top__left col-xl-4 col-10 d-flex align-items-center pl-4">
+      <div class="header-top__left col-xl-4 col-9 col-sm-10 d-flex align-items-center pl-2 pl-sm-4">
         <div class="dropdown header-top__language-list">
           <button class="dropdown-toggle header-top__language-button header-top__language-link lang-en pr-2" id="language-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English</button>
           <div class="dropdown-menu" aria-labelledby="language-dropdown-button">
@@ -141,7 +141,7 @@
       </div>
       <div class="header-bottom__search col-12 col-lg-7 order-1 mt-3 order-lg-0 mt-lg-0">
         <form class="form-inline row align-items-stretch justify-content-center justify-content-lg-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
-          <input class="search__input form-control input-group-prepend col-7 col-lg-6 col-xl-7" type="search" placeholder="Search for product..." aria-label="Search">
+          <input class="search__input form-control input-group-prepend col-6 col-md-7 col-lg-6 col-xl-7" type="search" placeholder="Search for product..." aria-label="Search">
           <select class="search__select form-control col-4 col-xl-3" id="search-select">
             <option value="all">All categories</option>
             <option value="notebook">Notebook</option>
