Responsive: Main banner (1200+)

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   </header>
   <div class="top-banners container-fluid p-0">
     <div class="row no-gutters">
-      <div class="top-banners__main-banner-slider col-7 carousel slide" id="main-banner-slider" data-ride="carousel">
+      <div class="top-banners__main-banner-slider col-xl-12 carousel slide" id="main-banner-slider" data-ride="carousel">
         <!-- Slider dots  -->
         <ol class="carousel-indicators main-banner__dot-list">
           <li class="main-banner__dot active" data-target="#main-banner-slider" data-slide-to="0"></li>
@@ -279,7 +279,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <div class="top-banners__second-banners col-5 d-flex flex-column">
+      <div class="top-banners__second-banners d-flex">
         <div class="top-banners__second-banner row flex-grow-1 align-items-center">
           <div class="second-banner__img col-5">
             <img class="d-block ml-auto" src="img/main_banner_image-2.png" alt="Product in second banner">
