Responsive: Main banner (768-991)

--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
       </div>
       <div class="top-banners__second-banners d-flex">
         <div class="top-banners__second-banner row flex-grow-1 align-items-center">
-          <div class="second-banner__img col-5">
+          <div class="second-banner__img col-4 col-lg-5">
             <img class="d-block ml-auto" src="img/main_banner_image-2.png" alt="Product in second banner">
           </div>
-          <div class="second-banner__text col-6 text-center">
+          <div class="second-banner__text col-8 col-lg-6 text-center">
             <div class="banner__category">ACCESSORIES</div>
             <div class="banner__title second-banner__title">Gateway Watch</div>
             <div class="item__price-list mb-4">
@@ -295,10 +295,10 @@
           </div>
         </div>
         <div class="top-banners__second-banner row flex-grow-1 align-items-center">
-          <div class="second-banner__img col-6 order-1">
+          <div class="second-banner__img col-4 col-lg-6 order-1">
             <img class="d-block mx-auto" src="img/main_banner_image-3.png" alt="Product in second banner">
           </div>
-          <div class="second-banner__text col-6 text-center">
+          <div class="second-banner__text col-8 col-lg-6 text-center">
             <div class="banner__category">Computers</div>
             <div class="banner__title second-banner__title">Apple iMac 21.5</div>
             <div class="item__price-list mb-4">
