--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
   </div>
   <main class="container">
     <div class="row">
-      <div class="sidebar col-3">
+      <div class="sidebar col-12 col-lg-3">
         <div class="sidebar__categories mb-4">
           <h3 class="sidebar-categories__title">Categories</h3>
           <ul class="sidebar-categories__list list-group">
@@ -1001,11 +1001,11 @@
           <img src="img/Promo-image2.jpg" alt="Promo product in sidebar promo!">
         </div>
       </div>
-      <div class="content col-9">
+      <div class="content col-12 col-lg-9">
         <section class="prod-categories">
           <h2 class="section-title mb-3">product categories</h2>
           <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-          <div class="nav mt-5" id="categories-tabs" role="tablist">
+          <div class="nav mt-4 mt-lg-5" id="categories-tabs" role="tablist">
             <a class="prod-categories__tab nav-item nav-link active p-0 mr-3" id="categories-1-tab" data-toggle="tab" href="#categories-1" role="tab" aria-controls="categories-1" aria-selected="true">Feautured categories</a>
             <a class="prod-categories__tab nav-item nav-link p-0 mx-4" id="categories-tab-2-tab" data-toggle="tab" href="#categories-2" role="tab" aria-controls="categories-2" aria-selected="false">popular categories</a>
             <a class="prod-categories__tab nav-item nav-link p-0 mx-3" id="categories-tab-3-tab" data-toggle="tab" href="#categories-3" role="tab" aria-controls="categories-3" aria-selected="false">new categories</a>
