Responsive: Main (768-991) (minor fix in static hover buttons in products)

--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
           </div>
           <div class="tab-content" id="categories-tabsContent">
             <div class="tab-pane fade show active" id="categories-1" role="tabpanel" aria-labelledby="categories-1-tab">
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-1.jpg" alt="Product categories image">
                 </a>
@@ -1027,7 +1027,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-2.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
@@ -1042,7 +1042,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-3.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
@@ -1057,7 +1057,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
@@ -1072,7 +1072,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-5.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
@@ -1087,7 +1087,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-6.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
@@ -1102,7 +1102,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-7.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
@@ -1117,7 +1117,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-8.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
@@ -1134,7 +1134,7 @@
               </div>
             </div>
             <div class="tab-pane fade" id="categories-2" role="tabpanel" aria-labelledby="categories-2-tab">
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
                 </a>
@@ -1149,7 +1149,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-5.jpg" alt="Product categories image">
                 </a>
@@ -1164,7 +1164,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-6.jpg" alt="Product categories image">
                 </a>
@@ -1179,7 +1179,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-7.jpg" alt="Product categories image">
                 </a>
@@ -1196,7 +1196,7 @@
               </div>
             </div>
             <div class="tab-pane fade" id="categories-3" role="tabpanel" aria-labelledby="categories-3-tab">
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
                 </a>
@@ -1211,7 +1211,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-3.jpg" alt="Product categories image">
                 </a>
@@ -1226,7 +1226,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-2.jpg" alt="Product categories image">
                 </a>
@@ -1241,7 +1241,7 @@
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
-              <div class="prod-categories__item text-center col-3">
+              <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-1.jpg" alt="Product categories image">
                 </a>
@@ -1263,8 +1263,8 @@
           <h2 class="section-title mb-3">popular PRODUCTS</h2>
           <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
           <div class="popular-prods__list row">
-            <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img hov-btn-call mb-4">
+            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+              <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-1.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
@@ -1286,8 +1286,8 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img hov-btn-call mb-4">
+            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+              <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-2.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
@@ -1309,8 +1309,8 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img hov-btn-call mb-4">
+            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+              <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-3.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
@@ -1332,8 +1332,8 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img hov-btn-call mb-4">
+            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+              <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-4.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
@@ -1355,8 +1355,8 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img hov-btn-call mb-4">
+            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+              <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-5.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
@@ -1378,8 +1378,8 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img hov-btn-call mb-4">
+            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+              <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-6.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
@@ -1458,7 +1458,7 @@
             <span class="icon-font-star-solid"></span>
             <span class="icon-font-star-regular"></span>
           </div>
-          <div class="item__price-list mb-4">
+          <div class="item__price-list mb-5 mb-lg-4">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
@@ -1481,7 +1481,7 @@
             <span class="icon-font-star-solid"></span>
             <span class="icon-font-star-regular"></span>
           </div>
-          <div class="item__price-list mb-4">
+          <div class="item__price-list mb-5 mb-lg-4">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
@@ -1504,7 +1504,7 @@
             <span class="icon-font-star-solid"></span>
             <span class="icon-font-star-regular"></span>
           </div>
-          <div class="item__price-list mb-4">
+          <div class="item__price-list mb-5 mb-lg-4">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
@@ -1527,7 +1527,7 @@
             <span class="icon-font-star-solid"></span>
             <span class="icon-font-star-regular"></span>
           </div>
-          <div class="item__price-list mb-4">
+          <div class="item__price-list mb-5 mb-lg-4">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
@@ -1550,7 +1550,7 @@
             <span class="icon-font-star-solid"></span>
             <span class="icon-font-star-regular"></span>
           </div>
-          <div class="item__price-list mb-4">
+          <div class="item__price-list mb-5 mb-lg-4">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
