--- a/index.html
+++ b/index.html
@@ -1006,9 +1006,9 @@
           <h2 class="section-title mb-3">product categories</h2>
           <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
           <div class="nav mt-4 mt-lg-5" id="categories-tabs" role="tablist">
-            <a class="prod-categories__tab nav-item nav-link active p-0 mr-3" id="categories-1-tab" data-toggle="tab" href="#categories-1" role="tab" aria-controls="categories-1" aria-selected="true">Feautured categories</a>
-            <a class="prod-categories__tab nav-item nav-link p-0 mx-4" id="categories-tab-2-tab" data-toggle="tab" href="#categories-2" role="tab" aria-controls="categories-2" aria-selected="false">popular categories</a>
-            <a class="prod-categories__tab nav-item nav-link p-0 mx-3" id="categories-tab-3-tab" data-toggle="tab" href="#categories-3" role="tab" aria-controls="categories-3" aria-selected="false">new categories</a>
+            <a class="prod-categories__tab nav-item nav-link active p-0 mr-3 mb-2" id="categories-1-tab" data-toggle="tab" href="#categories-1" role="tab" aria-controls="categories-1" aria-selected="true">Feautured categories</a>
+            <a class="prod-categories__tab nav-item nav-link p-0 mr-3 mb-2" id="categories-tab-2-tab" data-toggle="tab" href="#categories-2" role="tab" aria-controls="categories-2" aria-selected="false">popular categories</a>
+            <a class="prod-categories__tab nav-item nav-link p-0 mr-3 mb-2" id="categories-tab-3-tab" data-toggle="tab" href="#categories-3" role="tab" aria-controls="categories-3" aria-selected="false">new categories</a>
           </div>
           <div class="tab-content" id="categories-tabsContent">
             <div class="tab-pane fade show active" id="categories-1" role="tabpanel" aria-labelledby="categories-1-tab">
