--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
           <h2 class="section-title mb-3">popular PRODUCTS</h2>
           <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
           <div class="popular-prods__list row">
-            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+            <div class="popular-prods__item col-6 col-sm-4 mb-4 mb-lg-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-1.jpg" alt="Popular product images">
               </a>
@@ -1286,7 +1286,7 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+            <div class="popular-prods__item col-6 col-sm-4 mb-4 mb-lg-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-2.jpg" alt="Popular product images">
               </a>
@@ -1309,7 +1309,7 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+            <div class="popular-prods__item col-6 col-sm-4 mb-4 mb-lg-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-3.jpg" alt="Popular product images">
               </a>
@@ -1332,7 +1332,7 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+            <div class="popular-prods__item col-6 col-sm-4 mb-4 mb-lg-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-4.jpg" alt="Popular product images">
               </a>
@@ -1355,7 +1355,7 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+            <div class="popular-prods__item col-6 col-sm-4 mb-4 mb-lg-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-5.jpg" alt="Popular product images">
               </a>
@@ -1378,7 +1378,7 @@
                 <span class="item__price item__price--new mx-1">$299,99</span>
               </div>
             </div>
-            <div class="popular-prods__item col-4 mb-4 mb-lg-3">
+            <div class="popular-prods__item col-6 col-sm-4 mb-4 mb-lg-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-3 mb-lg-4">
                 <img src="img/pop_prod-6.jpg" alt="Popular product images">
               </a>
