Responsive: Bottom baners (768-991)

--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@
       </div>
     </div>
     <div class="bottom-banners row no-gutters">
-      <div class="second-bottom-banners col-4">
+      <div class="second-bottom-banners col-12 col-lg-4">
         <a href="#" class="second-b-banners__item">
           <div class="second-b-banners__category banner__category mb-1">category</div>
           <div class="second-b-banners__title">new iphone 6</div>
@@ -1424,7 +1424,7 @@
           </div>
         </a>
       </div>
-      <a href="#" class="main-bottom-banner col-8 row no-gutters">
+      <a href="#" class="main-bottom-banner col-12 col-lg-8 row no-gutters">
         <div class="main-b-banner__img col-6">
           <img src="img/main_bottom_baner_image.png" alt="Bottom banner image.">
         </div>
