--- a/index.html
+++ b/index.html
@@ -1425,10 +1425,10 @@
         </a>
       </div>
       <a href="#" class="main-bottom-banner col-12 col-lg-8 row no-gutters">
-        <div class="main-b-banner__img col-6">
+        <div class="main-b-banner__img col-sm-6">
           <img src="img/main_bottom_baner_image.png" alt="Bottom banner image.">
         </div>
-        <div class="main-b-banner__text col-6">
+        <div class="main-b-banner__text col-sm-6">
           <div class="second-b-banners__category banner__category">computers</div>
           <div class="main-b-banner__title mb-3">Apple iMac 21.5</div>
           <div class="promo__description">Lorem ipsum dolor sit amet, consectetur adipiscing dolore magna aliqua</div>
