Responsive: Latest news (481-575)

--- a/index.html
+++ b/index.html
@@ -1561,8 +1561,8 @@
       <h2 class="section-title mb-4">LATEST NEWS</h2>
       <p class="section-description mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
       <div class="latest-news__list row">
-        <div class="latest-news__item col-4">
-          <a href="#" class="latest-news__img mb-4">
+        <div class="latest-news__item col-sm-4">
+          <a href="#" class="latest-news__img mb-2 mb-sm-4">
             <img src="img/latest-news-1.jpg" alt="Latest news image" class="latest-news__img">
           </a>
           <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
@@ -1575,8 +1575,8 @@
             </span>
           </div>
         </div>
-        <div class="latest-news__item col-4">
-          <a href="#" class="latest-news__img mb-4">
+        <div class="latest-news__item col-sm-4">
+          <a href="#" class="latest-news__img mb-2 mb-sm-4">
             <img src="img/latest-news-2.jpg" alt="Latest news image" class="latest-news__img">
           </a>
           <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
@@ -1589,8 +1589,8 @@
             </span>
           </div>
         </div>
-        <div class="latest-news__item col-4">
-          <a href="#" class="latest-news__img mb-4">
+        <div class="latest-news__item col-sm-4">
+          <a href="#" class="latest-news__img mb-2 mb-sm-4">
             <img src="img/latest-news-3.jpg" alt="Latest news image" class="latest-news__img">
           </a>
           <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
@@ -1603,8 +1603,6 @@
             </span>
           </div>
         </div>
-        <div class="latest-news__item col-4"></div>
-        <div class="latest-news__item col-4"></div>
       </div>
     </section>
   </main>
