--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,7 @@
       <p class="footer__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta ad odio sit, doloribus perspiciatis nam corrupti architecto at ipsum recusandae quis provident nesciunt sapiente vitae porro sunt ab natus laudantium!</p>
       <hr class="footer__separator">
       <div class="footer__bottom row">
-        <div class="footer__links col-3">
+        <div class="footer__links col-4 col-xl-3">
           <h4 class="footer-links__title mb-3">Information</h4>
           <ul class="footer-link__list">
             <li class="footer-link__item"><a href="#" class="footer-link__link">Specials</a></li>
@@ -1625,7 +1625,7 @@
             <li class="footer-link__item"><a href="#" class="footer-link__link">Blog</a></li>
           </ul>
         </div>
-        <div class="footer__links col-3">
+        <div class="footer__links col-4 col-xl-3">
           <h4 class="footer-links__title mb-3">My account</h4>
           <ul class="footer-link__list">
             <li class="footer-link__item"><a href="#" class="footer-link__link">My orders</a></li>
@@ -1635,7 +1635,7 @@
             <li class="footer-link__item"><a href="#" class="footer-link__link">My personal info</a></li>
           </ul>
         </div>
-        <div class="footer__links col-3">
+        <div class="footer__links col-4 col-xl-3">
           <h4 class="footer-links__title mb-3">Categories</h4>
           <ul class="footer-link__list">
             <li class="footer-link__item"><a href="#" class="footer-link__link">Dresses</a></li>
@@ -1646,7 +1646,7 @@
             <li class="footer-link__item"><a href="#" class="footer-link__link">Shces</a></li>
           </ul>
         </div>
-        <div class="footer__social col-3">
+        <div class="footer__social col-12 col-xl-3">
           <h4 class="footer-links__title mb-4">Newsleter</h4>
           <form action="#" method="GET" class="footer__subscribe">
             <input type="email" class="footer__input" placeholder="ENTER YOUR E-MAIL">
