Fix validate errors

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
           <div class="q-view-popup__quantity">
             <span class="quantity__minus">-</span>
-            <input type="number" class="quantity__number-input" min="1" step="1" pattern="[0-9]*" value="1" inputmode="numeric">
+            <input type="number" class="quantity__number-input" min="1" step="1" value="1">
             <span class="quantity__plus">+</span>
             <button class="q-view-popup__btn btn">Add to cart</button>
           </div>
@@ -155,8 +155,8 @@
             <option value="accessories">Accessories</option>
           </select>
           <button class="search__button btn icon-font-search-solid col-auto" type="submit"></button>
-        </div>
-      </form>
+        </form>
+      </div>
       <div class="header-bottom__icons-list d-flex justify-content-end align-items-center col-6 col-lg-3">
         <a href="#" class="header-bottom__icon-item icon-font-heart-regular vish-list-popup"></a>
         <div class="vish-list">
@@ -1133,7 +1133,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="categories-2" role="tabpanel" aria-labelledby="categories-2-tab">
+            <div class="tab-pane fade" id="categories-2" role="tabpanel">
               <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
@@ -1195,7 +1195,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="categories-3" role="tabpanel" aria-labelledby="categories-3-tab">
+            <div class="tab-pane fade" id="categories-3" role="tabpanel">
               <div class="prod-categories__item text-center col-6 col-md-3">
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
