Adds buttons to bottom banners on hover and focus (only desktop)

--- a/index.html
+++ b/index.html
@@ -1407,24 +1407,26 @@
     </div>
     <div class="bottom-banners row no-gutters">
       <div class="second-bottom-banners col-12 col-lg-4">
-        <a href="#" class="second-b-banners__item">
+        <div href="#" class="second-b-banners__item" tabindex="0">
           <div class="second-b-banners__category banner__category mb-1">category</div>
           <div class="second-b-banners__title">new iphone 6</div>
           <div class="item__price-list">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
-        </a>
-        <a href="#" class="second-b-banners__item">
+          <a href="#" class="second-b-banners__btn">Buy now</a>
+        </div>
+        <div href="#" class="second-b-banners__item" tabindex="0">
           <div class="second-b-banners__category banner__category mb-1">category</div>
           <div class="second-b-banners__title">new iphone 6</div>
           <div class="item__price-list">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
-        </a>
+          <a href="#" class="second-b-banners__btn">Buy now</a>
+        </div>
       </div>
-      <a href="#" class="main-bottom-banner col-12 col-lg-8 row no-gutters">
+      <div class="main-bottom-banner col-12 col-lg-8 row no-gutters" tabindex="0">
         <div class="main-b-banner__img col-sm-6">
           <img src="img/main_bottom_baner_image.png" alt="Bottom banner image.">
         </div>
@@ -1433,8 +1435,9 @@
           <div class="main-b-banner__title mb-3">Apple iMac 21.5</div>
           <div class="promo__description">Lorem ipsum dolor sit amet, consectetur adipiscing dolore magna aliqua</div>
           <div class="promo__sale">up to <span>25%</span></div>
+          <a href="#" class="main-b-banner__btn">Buy now</a>
         </div>
-      </a>
+      </div>
     </div>
     <section class="new-products">
       <h2 class="section-title mb-3">NEW PRODUCTS</h2>
