--- a/index.html
+++ b/index.html
@@ -1564,24 +1564,26 @@
       <h2 class="section-title mb-4">LATEST NEWS</h2>
       <p class="section-description mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
       <div class="latest-news__list row">
+          <div class="latest-news__item col-sm-4">
+              <div class="latest-news__img-cont mb-2 mb-sm-4">
+                <img src="img/latest-news-1.jpg" alt="Latest news image" class="latest-news__img">
+                <a href="#" class="latest-news__link" tabindex="-1">Read more</a>
+              </div>          
+              <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
+              <div class="latest-news__footer mt-2">
+                <span class="icon-font-baseline-today-24px">24/11/2013</span>
+                <span class="icon-font-tag-black-shape">
+                  <a href="#" class="latest-news__tag">Shop,</a>
+                  <a href="#" class="latest-news__tag">Discount,</a>
+                  <a href="#" class="latest-news__tag">Electronics</a>
+                </span>
+              </div>
+            </div>
         <div class="latest-news__item col-sm-4">
-          <a href="#" class="latest-news__img mb-2 mb-sm-4">
-            <img src="img/latest-news-1.jpg" alt="Latest news image" class="latest-news__img">
-          </a>
-          <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
-          <div class="latest-news__footer mt-2">
-            <span class="icon-font-baseline-today-24px">24/11/2013</span>
-            <span class="icon-font-tag-black-shape">
-              <a href="#" class="latest-news__tag">Shop,</a>
-              <a href="#" class="latest-news__tag">Discount,</a>
-              <a href="#" class="latest-news__tag">Electronics</a>
-            </span>
-          </div>
-        </div>
-        <div class="latest-news__item col-sm-4">
-          <a href="#" class="latest-news__img mb-2 mb-sm-4">
+          <div class="latest-news__img-cont mb-2 mb-sm-4">
             <img src="img/latest-news-2.jpg" alt="Latest news image" class="latest-news__img">
-          </a>
+            <a href="#" class="latest-news__link" tabindex="-1">Read more</a>
+          </div>          
           <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
           <div class="latest-news__footer mt-2">
             <span class="icon-font-baseline-today-24px">24/11/2013</span>
@@ -1593,9 +1595,10 @@
           </div>
         </div>
         <div class="latest-news__item col-sm-4">
-          <a href="#" class="latest-news__img mb-2 mb-sm-4">
+          <div class="latest-news__img-cont mb-2 mb-sm-4">
             <img src="img/latest-news-3.jpg" alt="Latest news image" class="latest-news__img">
-          </a>
+            <a href="#" class="latest-news__link" tabindex="-1">Read more</a>
+          </div>          
           <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
           <div class="latest-news__footer mt-2">
             <span class="icon-font-baseline-today-24px">24/11/2013</span>
