Adds drop-down functional to footer link lists

--- a/index.html
+++ b/index.html
@@ -1619,8 +1619,8 @@
       <hr class="footer__separator">
       <div class="footer__bottom row">
         <div class="footer__links col-4 col-6 col-sm-4 col-xl-3">
-          <h4 class="footer-links__title mb-3">Information</h4>
-          <ul class="footer-link__list">
+          <h4 class="footer-links__title icon-font-caret-down-solid mb-3" data-toggle="collapse" data-target="#footer-hide-list-1" aria-expanded="false" aria-controls="#footer-hide-list-1">Information</h4>
+          <ul class="footer-link__list" id="footer-hide-list-1">
             <li class="footer-link__item"><a href="#" class="footer-link__link">Specials</a></li>
             <li class="footer-link__item"><a href="#" class="footer-link__link">New products</a></li>
             <li class="footer-link__item"><a href="#" class="footer-link__link">Top sellers</a></li>
@@ -1632,8 +1632,8 @@
           </ul>
         </div>
         <div class="footer__links col-4 col-6 col-sm-4 col-xl-3">
-          <h4 class="footer-links__title mb-3">My account</h4>
-          <ul class="footer-link__list">
+          <h4 class="footer-links__title icon-font-caret-down-solid mb-3" data-toggle="collapse" data-target="#footer-hide-list-2" aria-expanded="false" aria-controls="#footer-hide-list-2">My account</h4>
+          <ul class="footer-link__list" id="footer-hide-list-2">
             <li class="footer-link__item"><a href="#" class="footer-link__link">My orders</a></li>
             <li class="footer-link__item"><a href="#" class="footer-link__link">My merchandise returns</a></li>
             <li class="footer-link__item"><a href="#" class="footer-link__link">My credit slips</a></li>
@@ -1642,8 +1642,8 @@
           </ul>
         </div>
         <div class="footer__links col-4 col-6 col-sm-4 col-xl-3">
-          <h4 class="footer-links__title mb-3">Categories</h4>
-          <ul class="footer-link__list">
+          <h4 class="footer-links__title icon-font-caret-down-solid mb-3" data-toggle="collapse" data-target="#footer-hide-list-3" aria-expanded="false" aria-controls="#footer-hide-list-3">Categories</h4>
+          <ul class="footer-link__list" id="footer-hide-list-3">
             <li class="footer-link__item"><a href="#" class="footer-link__link">Dresses</a></li>
             <li class="footer-link__item"><a href="#" class="footer-link__link">Skirts</a></li>
             <li class="footer-link__item"><a href="#" class="footer-link__link">Outerwear</a></li>
