--- a/index.html
+++ b/index.html
@@ -1673,6 +1673,7 @@
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/slick.min.js"></script>
+  <script src="js/fancySelect.js"></script>
   <script src="js/script.js"></script>  
 </body>
 </html>
